--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(httr,content)
 importFrom(httr,http_error)
 importFrom(httr,http_type)
 importFrom(httr,modify_url)
+importFrom(httr,parse_url)
 importFrom(httr,status_code)
 importFrom(httr,user_agent)
 importFrom(jsonlite,fromJSON)
